<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Run On</string>
    <string name="activate_app">Run On is disabled</string>
    <string name="deactivate_app">Run On is enabled</string>
    <string name="help_text">Press menu for settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="about_title">About Run On</string>
    <string name="announcement_options_title">Announcement Options</string>
    <string name="enable_key">enable</string>
    <string name="default_locale_key">default_locale</string>
    <string name="run_policy_key">run_policy</string>
    <string name="say_sender_key">say_sender</string>
    <string name="say_message_key">say_message</string>
    <string name="test_speech_key">test_speech</string>
    <string name="tts_settings_key">tts_settings</string>
    <string name="run_on_enabled">Text messages will be read out</string>
    <string name="run_on_disabled">Text messages will not be read out</string>
    <string-array name="run_policies">
        <item>Only with headset</item>
        <item>Never with headset</item>
        <item>Always</item>
    </string-array>
    <string-array name="run_policies_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="sender_policies">
    	<item>Contact name if available</item>
    	<item>Contact number only</item>
    	<item>No contact announcement</item>
    </string-array>
    <string-array name="sender_policies_values">
    	<item>1</item>
    	<item>2</item>
    	<item>3</item>
    </string-array>
    <string name="say_message_enabled">Message text will be read out</string>
    <string name="say_message_disabled">Message text will not be read out</string>
    <string name="tts_options_title">TTS Options</string>
    <string name="text_speech_title">Test message</string>
    <string name="text_speech_summary">Sample incoming text message speech. Plays according to above settings.</string>
    <string name="tts_settings_title">Change TTS settings</string>
    <string name="tts_settings_summary">Adjust system TTS engine settings.</string>
    <string name="tts_test_number">5551234</string>
    <string name="tts_test_name">John Dough</string>
    <string name="tts_test_message">Successful test message is successful.</string>
</resources>
